# sphinx-playground

./: README.md  pyproject.toml
.github/workflows/: hello.yaml
sphinx/: __main__.py  human.py  lion.py  riddles.py  sphinx.py
sphinx.egg-info/: SOURCES.txt  entry_points.txt
