[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "sphinx"
authors = [
    {name = "Aya Elsayed", email = "aelsayed12@bloomberg.net"},
]
description = "Sphinx example"
readme = "README.md"
requires-python = ">=3.7"
version = "1.0.2"

[project.scripts]
my-script = "sphinx.__main__:main"
